# Robotic-Arm-V2

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/a4988/: CMakeLists.txt
components/as5600/: CMakeLists.txt  as5600.cpp  as5600.h
components/motorGearboxSystem/: CMakeLists.txt  motorGearboxSystem.cpp  motorGearboxSystem.h
components/motorModule/: CMakeLists.txt  motorModule.cpp  motorModule.h
components/pca9548A/: CMakeLists.txt  pca9548a.cpp  pca9548a.h
components/roboticArm/: CMakeLists.txt  config.h  robotFunctions.cpp  roboticArm.cpp  roboticArm.h  roboticFunctions.cpp
components/roboticArm/include/: config.h  robotFunctions.h  roboticArm.h
components/stepper/: CMakeLists.txt  stepper.cpp  stepper.h
components/tasks/: CMakeLists.txt  communication_task.cpp  communication_tasks.cpp  control_task.cpp  kinematics_task.cpp  motor_monitor_task.cpp  motor_task.cpp
components/tasks/include/: communication_task.h  communication_tasks.h  control_task.h  kinematics_task.h  motor_monitor_task.h  motor_task.h  robotic_definitions.h
main/: CMakeLists.txt  config.h  main.cpp
tests/: as5600_test.bak  bluetooth_test.bak  motorModule_test.bak  motor_step_speed_test.bak  pca9548a_test.bak  robot_angle_test.bak  stepper_test.bak  userCmdDecoder_test.bak
